<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.pac.gambletool.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/background_material_dark">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2" />

    <ImageView
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:id="@+id/imageView"
        android:src="@drawable/ic_money_bag"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/main_info"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/settings_help"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        android:layout_marginTop="88dp"
        android:textColor="@android:color/primary_text_dark"
        android:layout_alignTop="@+id/button_viewHTML"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/main_info"
        android:id="@+id/textView"
        android:textColor="@android:color/holo_green_light"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView2"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="@dimen/abc_text_size_display_3_material"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="VIEW LATEST HTML FILE"
        android:id="@+id/button_viewHTML"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="171dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="openHTML" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/downloaddate_default"
        android:id="@+id/label_lastDownloadTime"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/primary_text_dark" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:src="@android:drawable/ic_menu_preferences"
        android:onClick="openSettings" />

</RelativeLayout>
