<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.pac.gambletool.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_choosesound"
        android:id="@+id/button2"
        android:onClick="chooseRingtone"
        android:nestedScrollingEnabled="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_choosedlpath"
        android:id="@+id/textView5"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textColor="@android:color/primary_text_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sdcard"
        android:id="@+id/textView6"
        android:textStyle="bold"
        android:textColor="@android:color/primary_text_dark"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_htmlFilePath"
        android:layout_below="@+id/textView6"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:textColor="@android:color/primary_text_dark" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:layout_marginBottom="115dp"
        android:src="@android:drawable/ic_menu_save"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        android:onClick="writePreferences" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Save Settings"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:textColor="@android:color/holo_green_light" />

</RelativeLayout>
